--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         <div class="output-cointainer">
           <h1>Github Users</h1>
           <div id="output">
-            <!-- Results goes here -->
+            <img src="" alt="" id="user-img" />
+            <h3 id="login"></h3>
             <p id="message">Press "Show Users" button to see users</p>
           </div>
         </div>
